# axum-app-template

./: .env  .gitignore  Cargo.toml  README.md  cargo-generate.toml  configuration.json  configuration.test.json
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs
