[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "{{project-name}}"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.7"
tracing-appender = "0.2.2"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
config = "0.13.3"
chrono = "0.4.26"
uuid = { version = "1.4.0", features = ["v4"] }
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.axum]
version = "0.6.18"
features = ["tracing"]

[dependencies.sqlx]
version = "0.7.0"
features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]
